header fixed z-index corretto

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 header, footer{
   height: 90px;
   color: white;
+  z-index: 900;
 }
 /* btn */
 .mg-btn{
